# keyhog

./: .dockerignore  .gitattributes  .gitignore  .keyhog.toml.example  .keyhogignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  AUTHORS  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GAP_FINDINGS.toml  KEYHOG_LINUX_QUALITY_PROGRAM.md  LEDGER.md  LICENSE  NOTICE  PUBLISHING.md  README.md  ROUNDS.md  SECURITY.md  TESTING_PROGRAM.md  WAVE10_AGENT_PUSH.md  action.yml  audit.toml  coverage_thresholds.json  demo.tape  deny.toml  install.ps1  install.sh
crates/cli/: CHANGELOG.md  Cargo.toml  SPEC.md
crates/cli/data/: autoroute_source_classes.toml  doctor-self-test-detector.toml  path_skip_dirs.toml
crates/cli/src/: args.rs  atomic_file.rs  autoroute_cache_path.rs  backend_env.rs  baseline.rs  benchmark.rs  config.rs  exit_codes.rs  format.rs  inline_suppression.rs  installer.rs  lib.rs  log_dedup.rs  main.rs  orchestrator.rs  orchestrator_config.rs  path_validation.rs  reporting.rs  runtime_preflight.rs  skip_dirs.rs  sources.rs  stable_hash.rs  style.rs  test_fixture_suppressions.rs  testing.rs  value_parsers.rs
crates/cli/tests/: action_root_mirror_parity.rs  adversarial.rs  all_tests.rs  audit_arch_wiring.rs  audit_capability.rs  audit_coherence.rs  audit_generalization.rs  audit_insufficiency.rs  audit_research_innovation.rs  audit_testing_dogfood.rs  binstall_release_asset_parity.rs  break_it.rs  coherence_verify_count.rs  coherence_wiring_lane7.rs  config_hermetic.rs  cross_os_target_spec.rs  dogfood_all.rs  e2e_all.rs  e2e_backend.rs  e2e_backend_autoroute.rs  e2e_binary.rs  e2e_calibrate.rs  e2e_completion.rs  e2e_diff.rs  e2e_explain.rs  e2e_format_and_backend_equivalence.rs  e2e_gpu_autoroute_optin.rs  e2e_hook_install.rs  e2e_watch.rs  fused_dispatch_panic_contract.rs  gap_all.rs  gaps.rs  gate_no_hardcoded_detector_floors.rs  github_actions_exit_preservation.rs  github_collaboration_selection.rs  gpu_simd_parity.rs  lane10_daemon_accept_resilience.rs  lane10_daemon_e2e_lifecycle.rs  lane10_daemon_terminal_failure.rs  lane10_daemon_version_staleness.rs  (+92 more)
crates/core/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md  build.rs
crates/core/data/: aws-canary-accounts.toml  remediation.toml  service-env-vars.toml
crates/core/examples/: core_standalone.rs
crates/core/rules/: config-keywords.toml  decoder-source-suffixes.toml  service-verification-domains.toml  shared-tenant-suffixes.toml
crates/core/src/: allowlist.rs  allowlist_metadata.rs  api.rs  ascii_ci.rs  auto_fix.rs  aws.rs  banner.rs  calibration.rs  config.rs  credential.rs  dedup.rs  detector_file_io.rs  display.rs  encoding.rs  env_config.rs  finding.rs  git_lfs.rs  hardening.rs  hyperscan_cache.rs  json_selector.rs  lib.rs  merkle_index.rs  merkle_spec_hash.rs  registry.rs  report.rs  rule_filter.rs  safe_bin.rs  source.rs  spec.rs  state_file.rs  testing.rs  timing.rs  verification_domain.rs  winpath.rs
crates/core/tests/: all_tests.rs  dedup_decoder_alias.rs  detector_corpus_integrity.rs  display_path_normalization.rs  encoding_decode_boundary_truth_matrix.rs  gaps.rs  new_core_allowlist_spec.rs  new_core_finding_dedup.rs  new_core_types.rs  perf_algo_complexity.rs  perf_suppression.rs  regression_allowlist_governance.rs  regression_allowlist_matching.rs  regression_allowlist_metadata_dedup.rs  regression_allowlist_typoed_entries_fail_closed.rs  regression_auto_fix_runtime_extension_hook.rs  regression_auto_fix_tier_b_service_env_map.rs  regression_calibration_beta.rs  regression_chunk_metadata.rs  regression_compute_spec_hash.rs  regression_confidence_scoring.rs  regression_config_precedence.rs  regression_config_severity_map.rs  regression_config_toml_merge.rs  regression_core_text_primitives.rs  regression_credential_hash_stability.rs  regression_csv_formula_injection.rs  regression_encoding_base64_padding_edge_cases.rs  regression_finding_confidence_field.rs  regression_finding_dedup.rs  regression_finding_dedup_merge.rs  regression_finding_location_merge.rs  regression_finding_multi_location.rs  regression_finding_ordering.rs  regression_finding_sarif_result.rs  regression_finding_serde_roundtrip.rs  regression_git_hash_matches_checkout.rs  regression_html_report_coverage_panel.rs  regression_html_report_scan_metadata_wired.rs  regression_html_report_script_breakout_xss.rs  (+51 more)
crates/scanner/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/scanner/benches/: adversarial.rs  alphabet.rs  compile_time.rs  confidence.rs  decode.rs  edge_cases.rs  entropy.rs  gpu_vs_hs_8mib.rs  hs_vectored_candidate.rs  scan_throughput.rs  size_pattern_sweep.rs
crates/scanner/data/: disclaimer-phrases.toml  evasion-anchors.toml  gpu-self-test-detector.toml  test-path-rules.toml
crates/scanner/examples/: adv_bare_vs_wrap.rs  adv_fail_dump.rs  adv_inventory.rs  adv_probe_batch.rs  adv_probe_detailed.rs  adv_probe_one.rs  adv_triage.rs  adv_wrap_only.rs  dump_features.rs  evasion_count.rs  evasion_fix_probe.rs  real_tree_benchmark.rs  scan_probe.rs  scanner_standalone.rs
crates/scanner/scripts/: split_r43_scan_m.py
crates/scanner/spec_waivers/: megakernel_literal_set_parity.toml
crates/scanner/src/: alphabet_filter.rs  anchored_regex.rs  api.rs  ascii_ci.rs  assignment_keyword_matcher.rs  assignment_keywords.rs  aws.rs  bigram_bloom.rs  compiler.rs  compiler_build.rs  compiler_compile.rs  compiler_prefix.rs  credential_context_keywords.rs  credential_shapes.rs  deadline.rs  decode_structure.rs  detector_catalog.rs  detector_classification.rs  detector_execution_policy.rs  detector_ids.rs  detector_key_material_policy.rs  detector_ml_policy.rs  detector_plan.rs  entropy_avx512.rs  entropy_fast.rs  entropy_fast_neon.rs  entropy_fast_x86.rs  entropy_floors.rs  error.rs  fragment_cache.rs  gpu.rs  (+42 more)
crates/sources/: CHANGELOG.md  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_target.rs  har_expand_target.rs  pdf_extract_target.rs  regex_compile_target.rs  scanner_target.rs
tools/ci-operability/: Cargo.toml  README.md
(+7177 files in other folders)
