[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/scanner",
    "crates/verifier",
    "crates/sources",
    "crates/cli",
]
exclude = ["vendor/vyre", "vendor/shared"]
default-members = ["crates/cli"]

[workspace.package]
version = "0.5.37"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "keyhog detects leaked credentials in source trees, git history, archives, and remote sources"
readme = "README.md"
repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Santh Project <security@santh.dev>"]

[workspace.dependencies]
keyhog-core = { version = "=0.5.37", path = "crates/core" }
keyhog-scanner = { version = "=0.5.37", path = "crates/scanner", default-features = false }
keyhog-verifier = { version = "=0.5.37", path = "crates/verifier" }
# default-features = false so consumers opt into source backends per profile.
# Cargo ignores a member's `default-features = false` unless the workspace entry
# also sets it (warns "default-features is ignored ... could become a hard error"),
# so the lean `ci` profile could not actually shed git/web/gix until this was set
# here. The cli re-enables git/web/github/s3/docker in its full/default/portable
# profiles; `ci` enables none (filesystem + stdin only).
keyhog-sources = { version = "=0.5.37", path = "crates/sources", default-features = false }

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_with = "=3.18.0"
serde_yaml = "=0.9.34"
toml = "=1.1.2"

# Async
tokio = { version = "=1.52.3", features = ["full"] }
futures-util = "=0.3.32"
async-trait = "=0.1.89"

# Pattern matching
aho-corasick = "=1.1.4"
regex = "=1.12.3"
regex-syntax = "=0.8.10"

# HTTP
reqwest = { version = "=0.12.28", features = ["json", "stream", "cookies", "multipart", "blocking"] }

# Error handling
thiserror = "=2.0.18"
anyhow = "=1.0.102"

# CLI
clap = { version = "=4.6.1", features = ["derive"] }
clap_complete = "=4.6.0"
dirs = "=6.0.0"

# TUI (used by the `keyhog tui` subcommand for the live-scan demo). Pinned
# to the 0.29.0 / 0.28.1 pair so ratatui's re-exported crossterm types
# match the version we use directly for raw mode + event polling: a
# crossterm minor-version mismatch turns `event::poll` into a 'method
# not found' compile error because the trait identity changes.
ratatui = "=0.29.0"
crossterm = "=0.28.1"

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

# File system
codewalk = "=0.2.5"
base64 = "=0.22.1"
# Pure-Rust, verify-only minisign: used by `keyhog update` to verify the
# signature of a downloaded release binary before self-replacing.
minisign-verify = "=0.2.4"
unicode-normalization = "=0.1.25"
tempfile = "=3.27.0"
memmap2 = "=0.9.10"
glob = "=0.3.3"
wait-timeout = "=0.2.1"
tar = "=0.4.45"
# True-decompression decoders for the always-on filesystem compressed-input
# path (crates/sources/filesystem/extract.rs). ziftsieve only extracts DEFLATE
# *literals* for its bloom prefilter and drops back-references, so it cannot
# reconstruct the real decompressed bytes a scanner needs. These crates do the
# full inflate. Versions pinned to what the lockfile already resolves
# (transitively via ziftsieve) so no new graph nodes are introduced.
flate2 = "=1.1.9"
zstd = "=0.13.3"
lz4_flex = "=0.11.6"
snap = "=1.1.1"

# Git
gix = { version = "=0.77.0", default-features = false, features = ["max-performance-safe"] }

# Benchmarking
criterion = { version = "=0.8.2", features = ["html_reports"] }

# Parallelism
rayon = "=1.12.0"
memchr = "=2.8.0"
parking_lot = "=0.12.5"
dashmap = "=6.2.1"
indexmap = "=2.7.1"
notify = "=8.0.0"

# Performance libraries
simdsieve = "=0.1.1"
# vyre 0.6.1 is published to crates.io. The vendor/vyre/ tree stays in
# place for offline/local development and is excluded from the workspace
# (`exclude` above); to re-pin path overrides for an unreleased vyre,
# add `path = "vendor/vyre/<crate>"` back onto each line.
# CUDA backend is wired in keyhog-scanner behind the `cuda` feature
# (default on). On hosts without libcuda.so the backend's `acquire()`
# call fails cleanly and the scanner falls back to wgpu.
vyre = "=0.6.1"
vyre_libs = { package = "vyre-libs", version = "=0.6.1" }
vyre-driver-wgpu = { package = "vyre-driver-wgpu", version = "=0.6.1" }
vyre-driver-cuda = { package = "vyre-driver-cuda", version = "=0.6.1" }
vyre-runtime = "=0.6.1"
wgpu = "=25.0.2"
pollster = "=0.4.0"
bytemuck = { version = "=1.25.0", features = ["derive"] }
hyperscan = "=0.3.2"
lru = "=0.12.5"

# Crypto and encodings
sha2 = "=0.10.9"
blake3 = "=1.8.5"
hmac = "=0.12.1"
hex = "=0.4.3"
percent-encoding = "=2.3.2"
url = "=2.5.8"
urlencoding = "=2.1.3"
chrono = "=0.4.44"

# OOB verification (interactsh client): RSA-OAEP-SHA256 wrapped AES-256-CFB.
# Pinned to RustCrypto stack — no openssl/native-tls dependency, pure Rust.
rsa = { version = "=0.9.7", features = ["sha2"] }
aes = "=0.8.4"
cfb-mode = "=0.8.2"
rand = "=0.8.5"
uuid = { version = "=1.11.0", features = ["v4"] }

# Archive and binary analysis
ziftsieve = "=0.1.0"
openpack = "=0.2.2"
goblin = "=0.10.5"
quick-xml = { version = "=0.37.5", features = ["serialize"] }
libc = "=0.2.186"
io-uring = "=0.7.11"

# Test support
proptest = "=1.11.0"
proptest-derive = "=0.8.0"
httpmock = "=0.8.3"
rusty-fork = "=0.3.1"

# Runtime initialization
once_cell = "=1.21.4"
lazy_static = "=1.5.0"

# Security: zero-on-drop credentials, memory-protection helpers
zeroize = { version = "=1.8.2", features = ["derive"] }

[workspace.metadata.santh]
status = "alpha"

# Build Profiles
# cargo build --release                          → default (ML + entropy + decode + multiline)
# `--fast` is a runtime CLI flag (not Cargo `-F fast`; the `fast` feature is unused).
# cargo build --release -F gpu                   → wgpu compute shader batch MoE inference
# cargo build --release -F binary                → Ghidra decompiler + printable string extraction
# cargo build --release -F full                  → all scanner features + live verification
# cargo build --release --no-default-features    → bare minimum (Aho-Corasick + regex only)
#
# Features are independently toggleable. Combine freely:
#   cargo build --release -F gpu,binary,full     → everything
#   cargo build --release -F binary              → add Ghidra to default build

# ── Release profile: max-perf single-binary deploys ────────────────────
# - opt-level = 3            full compiler optimization (loop vec, inlining)
# - lto = "fat"              cross-crate inlining; ~10-20% throughput on hot paths
# - codegen-units = 1        worse compile times, better runtime (consistent
#                            with Hyperscan + ICU + serde_json being heavy)
# - panic = "abort"          smaller binary, no unwinding overhead in hot paths
# - strip = "symbols"        smaller binary on disk; backtraces unchanged at
#                            runtime (panic_abort + Rust std lookups)
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

# ── Release-fast: CI builds where you want -O3 but not multi-minute LTO.
# Use with `cargo build --profile release-fast`.
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = "none"
# Keep `debug_assert!`/`debug_assert_eq!` invariant checks ON under this
# profile. Nearly all CI test execution (integration-tests, strict-runners,
# e2e, property, sarif) runs under `release-fast`, which otherwise inherits
# `release` -> debug_assertions OFF, so those checks went unexercised in CI
# except the small dev `--lib` runs. The runtime cost is negligible vs the
# coverage gained.
debug-assertions = true

# ── Bench profile: same as release but with debug symbols so flamegraphs
# attribute samples to functions. Use with `cargo bench` automatically.
[profile.bench]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# codewalk-0.2.5 (released 2026-05-03) ships the Windows-stable
# fix that was previously vendored under `vendor/codewalk` —
# replacing the nightly-only `volume_serial_number()` /
# `file_index()` symlink-identity probe with a `canonicalize`-based
# one that works on stable rustc on every platform we ship to.
# No patch needed anymore; pin to `=0.2.5` so we don't silently pick
# up a future regression.
