[package]
name = "keyhog-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
repository = "https://github.com/santhsecurity/keyhog"

[package.metadata]
cargo-fuzz = true

# Standalone - NOT part of the keyhog workspace. cargo-fuzz drives
# this crate with its own rustflags (asan + sancov + extra `-Cpasses`)
# that conflict with the workspace's normal release profile.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.keyhog-core]
path = "../crates/core"

[dependencies.keyhog-sources]
path = "../crates/sources"
# Only the always-on filesystem/PDF extraction path is fuzzed; drop the network
# source features (git/web/…) so the harness builds lean and deterministic.
default-features = false

[dependencies.keyhog-scanner]
path = "../crates/scanner"
# Fuzz the scan LOGIC (panics / hangs / OOM), not the GPU backend. The default
# feature set pulls `gpu`, whose scanner init probes Vulkan and acquires a wgpu
# backend. On GPU-less hosted CI runners that "GPU" is llvmpipe (software
# rasterization), so init + any GPU-routed work is catastrophically slow — the
# scanner_target OnceLock init alone (run #0, the empty input) blew past
# libFuzzer's 1200s per-unit timeout. CPU/SIMD covers the fuzz goal fully and
# deterministically; drop `gpu` so the targets never touch a software Vulkan.
default-features = false
features = ["ml", "entropy", "decode", "multiline", "simdsieve", "simd"]

[[bin]]
name = "decode_target"
path = "fuzz_targets/decode_target.rs"
test = false
doc = false
bench = false

# scanner_target - fuzz the full `CompiledScanner::scan` pipeline.
# This is the most product-relevant fuzz: it exercises detector
# loading, regex compilation, AC pre-filter, regex confirmation,
# suppression heuristics, and credential extraction. A panic OR a
# hang here is a real bug a user can hit by feeding keyhog a
# pathological file.
[[bin]]
name = "scanner_target"
path = "fuzz_targets/scanner_target.rs"
test = false
doc = false
bench = false

# regex_compile_target - fuzz the detector-regex compiler. Detector
# regexes are user-extensible via TOML, so a bad regex string MUST NOT
# panic the compiler - it must return a typed Err and let the loader
# skip that detector.
[[bin]]
name = "regex_compile_target"
path = "fuzz_targets/regex_compile_target.rs"
test = false
doc = false
bench = false

# pdf_extract_target - fuzz the hand-rolled PDF text extractor in
# keyhog-sources (the un-fuzzed `crates/sources` parser surface). A user
# scanning an attacker-supplied `.pdf` reaches `(...)`/`<...>` string parsing,
# stream inflate, and dict-window search; a panic / OOB / hang here is a real
# untrusted-document DoS. The entry is `#[cfg(fuzzing)]`-gated (no prod API).
[[bin]]
name = "pdf_extract_target"
path = "fuzz_targets/pdf_extract_target.rs"
test = false
doc = false
bench = false

# har_expand_target - fuzz the HAR expander (JSON parse + UTF-16/8 decode +
# chunk rendering) in keyhog-sources. A user scanning an attacker `.har`
# reaches it; panic / OOB / hang here is an untrusted-document DoS.
[[bin]]
name = "har_expand_target"
path = "fuzz_targets/har_expand_target.rs"
test = false
doc = false
bench = false
