[package]
name = "keyhog-core"
description = "keyhog-core: shared data model and detector specifications for the KeyHog secret scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Santh Project <security@santh.dev>"]
license.workspace = true
repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog-core"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
# Defensive: exclude the runtime-generated parse cache so a developer
# who forgot to `git clean` between scans can't ship a stale cache to
# crates.io. The .gitignore covers this for committed state; this
# covers `cargo package`.
exclude = ["detectors/.keyhog-cache.json"]

[package.metadata.santh]
status = "alpha"

[dependencies]
# SECURITY: security-critical deps are pinned to exact versions
# matching the workspace, not floating `"1"` / `"0.10"`. A floating
# spec lets a backdoored patch release land via `cargo update`
# without any review. kimi-19 supply-chain audit, 2026-05-23.
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "1"
toml = { workspace = true }
thiserror = "2"
tracing = "0.1"
regex = "=1.12.3"
regex-syntax = "0.8"
sha2 = { workspace = true }
rayon = "1"
hex = "0.4"
once_cell = "1"
async-trait = "0.1"
serde_with = "3"
parking_lot = "0.12"
indexmap = "2"
# `pure` forces the portable Rust implementation and drops blake3's C/assembly
# build script, which fails on the macos-latest (arm64) CI runner and on any
# cross/portable build without a target C toolchain. blake3 here only hashes
# files for the incremental merkle cache (cold path, not the scan hot loop), so
# the pure-Rust speed cost is irrelevant while the build becomes target-agnostic.
blake3 = { version = "=1.8.5", features = ["pure"] }
dirs = "6"
zeroize = { version = "=1.8.2", features = ["derive"] }
anyhow = "=1.0.102"
# Used for atomic-rename writes of `merkle.idx` and `calibration.json`
# via `NamedTempFile::persist()`. The Drop impl deletes the tmp on
# panic between create and rename, so a partial save doesn't leak a
# stale `tmp.NNN` next to the real cache file.
tempfile = "3"
# `vyre_libs::rule` for the declarative `.keyhogignore.toml` engine
# (see `crates/core/src/rule_filter.rs`). Pulls in the `rule`
# feature which compiles the CPU evaluator + the `regex` dep used
# by `RuleCondition::RegexMatch`.
vyre_libs = { workspace = true, features = ["rule"] }
smallvec = { version = "1" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
